# GeometryTools

./: .gitignore  CMakeLists.txt  Makefile
cmake/: mason.cmake
include/: noncopyable.hpp  point2d.hpp  pointslist.hpp  util.hpp  wagyu.hpp
src/: main.cpp  point2d.cpp  util.cpp  wagyu.cpp
test/: test.cpp
